<resources>
    <string name="app_name">SprintCalculator</string>
    <string name="action_settings">Settings</string>

    <string name="sprint_schedule">Schedule</string>
    <string name="common_clear">Clear</string>

    <!-- activity -->
    <string name="sprint">Sprint</string>
    <string name="start_date">Start date :</string>
    <string name="end_date">End date :</string>
    <string name="select_date">select</string>
    <string name="sprint_period">Period :</string>
    <string name="select_holidays">Holidays :</string>
    <string name="retrospective_meeting">Retrospective meeting :</string>
    <string name="plan_meeting">Plan meeting :</string>
    <string name="working_days">Working days :</string>
    <string name="innovation_days">Innovation days :</string>
    <string name="demo_days">Demo days :</string>
    <string name="total_days">Total days :</string>
    <string name="sprint_start_number">Sprint Number :</string>

    <string name="please_select_start_date">Please select start date!</string>
    <string name="please_select_end_date">Please select end date!</string>
    <string name="sprint_number_should_bigger_than_0">Sprint number should bigger than 0!</string>
    <string name="start_date_should_not_be_weekend">Start date can\'t be weekend!</string>
    <string name="start_date_should_not_be_public_holiday">Start date can\'t be public holiday!</string>

    <string name="holiday_should_not_be_weekend">Holiday can\'t be weekend!</string>
    <string name="holiday_should_not_be_public_holiday">Holiday can\'t be public holiday!</string>
    <string name="holiday_already_been_selected">Holiday already been selected!</string>

    <string name="copy_sprint_content_success">Copy sprint content success!</string>

</resources>
