<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:padding="@dimen/activity_margin">
            <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/small_layout_height"
                          android:orientation="horizontal"
                          android:gravity="center_vertical"
                          android:layout_marginBottom="@dimen/common_margin_bottom">
                <TextView android:text="@string/start_date" android:layout_width="wrap_content"
                          android:textSize="@dimen/common_text_size"
                          android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/startDateTextView"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/common_margin_left"
                        android:textSize="@dimen/common_text_size"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>

                <Button
                        android:id="@+id/startDateBtn"
                        style="@style/CommonButton"
                        android:layout_marginLeft="@dimen/common_margin_left"
                        android:text="@string/select_date"/>
            </LinearLayout>


            <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/small_layout_height"
                          android:orientation="horizontal"
                          android:gravity="center_vertical"
                          android:layout_marginBottom="@dimen/common_margin_bottom">
                <TextView android:text="@string/end_date" android:layout_width="wrap_content"
                          android:textSize="@dimen/common_text_size"
                          android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/endDateTextView"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/common_margin_left"
                        android:textSize="@dimen/common_text_size"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>

                <Button
                        android:visibility="gone"
                        style="@style/CommonButton"
                        android:layout_marginLeft="@dimen/common_margin_left"
                        android:text="@string/select_date"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:gravity="center_vertical"
                          android:layout_marginBottom="@dimen/common_margin_bottom">
                <TextView android:text="@string/select_holidays" android:layout_width="wrap_content"
                          android:textSize="@dimen/common_text_size"
                          android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/holidaysTextView"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/common_margin_left"
                        android:textSize="@dimen/common_text_size"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>

                <Button
                        android:id="@+id/selectHolidaysBtn"
                        style="@style/CommonButton"
                        android:layout_marginLeft="@dimen/common_margin_left"
                        android:text="@string/select_date"/>

                <Button
                        android:id="@+id/clearHolidaysBtn"
                        style="@style/CommonButton"
                        android:layout_marginLeft="@dimen/common_margin_left"
                        android:text="@string/common_clear"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/small_layout_height"
                          android:orientation="horizontal"
                          android:gravity="center_vertical"
                          android:layout_marginBottom="@dimen/common_margin_bottom">
                <TextView android:text="@string/sprint_period" android:layout_width="wrap_content"
                          android:textSize="@dimen/common_text_size"
                          android:layout_height="wrap_content"/>

                <Spinner
                        android:id="@+id/periodSpinner"
                        android:layout_marginLeft="@dimen/common_margin_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/sprintPeriod"/>

            </LinearLayout>


            <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/small_layout_height"
                          android:orientation="horizontal"
                          android:gravity="center_vertical"
                          android:layout_marginBottom="@dimen/common_margin_bottom">
                <TextView android:text="@string/innovation_days" android:layout_width="wrap_content"
                          android:textSize="@dimen/common_text_size"
                          android:layout_height="wrap_content"/>

                <Spinner
                        android:id="@+id/innovationDaysSpinner"
                        android:layout_marginLeft="@dimen/common_margin_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/meetingDays"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/small_layout_height"
                          android:orientation="horizontal"
                          android:gravity="center_vertical"
                          android:layout_marginBottom="@dimen/common_margin_bottom">
                <TextView android:text="@string/retrospective_meeting" android:layout_width="wrap_content"
                          android:textSize="@dimen/common_text_size"
                          android:layout_height="wrap_content"/>

                <Spinner
                        android:id="@+id/retrospectiveMeetingSpinner"
                        android:layout_marginLeft="@dimen/common_margin_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/meetingDays"/>

            </LinearLayout>


            <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/small_layout_height"
                          android:orientation="horizontal"
                          android:gravity="center_vertical"
                          android:layout_marginBottom="@dimen/common_margin_bottom">
                <TextView android:text="@string/demo_days" android:layout_width="wrap_content"
                          android:textSize="@dimen/common_text_size"
                          android:layout_height="wrap_content"/>

                <Spinner
                        android:id="@+id/demoSpinner"
                        android:layout_marginLeft="@dimen/common_margin_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/meetingDays"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/small_layout_height"
                          android:orientation="horizontal"
                          android:gravity="center_vertical"
                          android:layout_marginBottom="@dimen/common_margin_bottom">
                <TextView android:text="@string/plan_meeting" android:layout_width="wrap_content"
                          android:textSize="@dimen/common_text_size"
                          android:layout_height="wrap_content"/>

                <Spinner
                        android:id="@+id/planMeetingSpinner"
                        android:layout_marginLeft="@dimen/common_margin_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/meetingDays"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/small_layout_height"
                          android:orientation="horizontal"
                          android:gravity="center_vertical"
                          android:focusable="true"
                          android:focusableInTouchMode="true"
                          android:layout_marginBottom="@dimen/common_margin_bottom">
                <TextView android:text="@string/sprint_start_number" android:layout_width="wrap_content"
                          android:textSize="@dimen/common_text_size"
                          android:layout_height="wrap_content"/>

                <EditText
                        android:id="@+id/sprintNumberEditText"
                        android:maxLength="2"
                        android:inputType="number"
                        android:text="1"
                        android:layout_marginLeft="@dimen/common_margin_left"
                        android:textSize="@dimen/common_text_size"
                        android:layout_width="48dp" android:layout_height="wrap_content"/>


            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>